--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 <p>I also use this space to document what inspires me in a wide
 range of mediums.</p>
 <p>🧠 <strong>Core Focus</strong>:<br />
-- Computational science and engineering
+- Computational science and engineering<br />
 - Self Study<br />
 - Philosophical reflection </p>
 <p>This website was created using <a href="https://www.mkdocs.org/">MKDocs</a>, show them some love!</p>
